# ResearchCloud

./: .gitignore  AGENTS.md  README.md
.cursor/: environment.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  blueprints.py  connections.py  resources.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  catalog.py  connection.py  user.py
backend/app/nutanix/: base.py  factory.py  mock.py  real.py
backend/app/schemas/: auth.py  catalog.py  connection.py  nutanix.py
backend/app/services/: blueprint_render.py  blueprint_service.py  connection_service.py
backend/tests/: conftest.py  test_auth.py  test_blueprints.py  test_connections.py  test_resources.py
deploy/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
deploy/helm/researchcloud/: Chart.yaml  values.yaml
deploy/vm/: README.md  deploy.sh
docs/: architecture.md  roadmap.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppLayout.tsx  BucketsDrawer.tsx  NoConnection.tsx  SharesDrawer.tsx  StateBadge.test.tsx  StateBadge.tsx
frontend/src/pages/: BlueprintsPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  FilesPage.tsx  (+5 more)
infra/: main.tf  providers.tf  variables.tf  versions.tf
scripts/: install.sh
(+12 files in other folders)
